<resources>
    <string name="app_name">UserInput</string>
    <string name="entername">"Enter Name: "</string>
    <string name="back">Back</string>
    <string name="nextScreen">Next Screen</string>
    <string name="entryText" />
    <string name="mainText">Enter Your Name:</string>
    <string name="welcome">"Welcome to Name Hunter! "</string>
    <string name="joemama">ex: Joe Mama</string>
    <string name="begin">Begin!</string>
    <string name="nextText">Hello</string>
    <string name="namePower">"Name Strength: "</string>
    <string name="gameInfo">Welcome to Name Hunter! Discover the power of your name and see if it is strong enough to stop the terrifying Name Hunter from devouring your name and your world as you know it!</string>
    <string name="stats">Stats</string>
    <string name="info">Info</string>
    <string name="winorlose">You won!</string>
    <string name="namelength">"Name Length: "</string>
    <string name="defeat">You defeated the name hunter!</string>
</resources>